fixes bug 278433 "setvalue element doesn't use @value as context" patch by aaronr@us.ibm.com r=smaug sr=darin